2007-09-10  Brian Pepple  <bpepple@fedoraproject.org>

	* src/Makefile.am:
	* src/twitux-avatar.[ch]: add functions to roundify
	user's avatar if it's opaque.

2007-09-09  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* NEWS: Bump version number, and start to add items that will be
	fixed in the next release.

2007-09-07  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-dbus.c:
	* src/twitux-network.c:
	* src/twitux-app.[ch] (twitux_app_state_on_connection): Minor tweaks.

2007-09-04  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-send-message-dialog.c (message_set_characters_available): limit
	messages sent to Twitter to a maximum of 140 characters.

2007-09-03  Brian Pepple  <bpepple@fedoraproject.org>

	* data/main.glade:
	* src/twitux-app.c (app_connection_items_setup): 
	Handle the widgets state more sanely, and remove the
	stop network function from the ui.
	
2007-09-03  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* Makefile.am:
	* src/twitux-app.c: Add initial Network Manager dbus
	support.

2007-09-02  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-app.[c]: Add code to show gui-notifications
	using libnotify.

2007-09-02  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c:
	* src/twitux-app.c: Login code review. Bugfixes. Check if
	friends are loaded before request them.

2007-09-01  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-dbus.[ch]: Add files for NetworkManager dbus support.

2007-08-31  Daniel Morales <daniminas@gmail.com>

	* src/twitux-app.c: Nicer loading for friend's menu.

2007-08-31  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c (parser_twitux_node_status): fix encoding
	of status messages, so they show correctly in the list view.

	* data/Makefile.am: 
	* src/twitux-app.c (app_status_icon_create): Use icon name
	for status icon, instead of using hard-coded pixmap. Don't
	bother to install pixmap into datadir.
